# Frogger

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  LICENSE  Makefile  build.ninja  valgrind_output.txt
.cmake/api/v1/reply/: cache-v2-cfc001bef6a3453ffa26.json  cmakeFiles-v1-449ed24812e8a3b3f016.json  codemodel-v2-462e4571409c9e9b7732.json  index-2024-09-01T17-57-49-0947.json  target-frogger-97d308619dffcdc72df6.json
src/: main.c
src/commons/: drawing.h  entities.h  imports.h  structures.h
src/commons/drawings/: drawing.c  menus.c
src/concurrency/: common.c  common.h  processes.c  processes.h  threads.c  threads.h
src/concurrency/shared/: shared.c  shared.h
src/game/: addons.c  addons.h  core.c  core.h  entities.c  entities.h  generators.c  routines.c  routines.h
src/graphics/: drawing.c  drawing.h  entities.h  map.h
src/graphics/drawings/: drawing.c  menus.c
src/old/game/: core.c  core.h  entities.c  entities.h  routines.h
src/processes/: processes.c  processes.h
src/utilities/: addons.c  addons.h  common.c  common.h  shortcuts.c  shortcuts.h
src/utils/: addons.c  addons.h  globals.c  globals.h  imports.h  shortcuts.c  shortcuts.h
